# terminalz

./: .gitignore  CLA.md  Cargo.toml  index.html  package.json  readme.md  tsconfig.json  tsconfig.node.json
.github/: PULL_REQUEST_TEMPLATE.md
src/: App.vue  main.js  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  local_term.rs  main.rs  models.rs  schema.sql  sftp.rs  ssh.rs  sysinfo.rs  terminal.rs  vault.rs
src/components/: FileTransfer.vue  GroupDialog.vue  HostDialog.vue  HostsPanel.vue  KeychainPanel.vue  PortForwardPanel.vue  ServerStatus.vue  SettingsPanel.vue  SftpTab.vue  Sidebar.vue  SnippetsPanel.vue  TabBar.vue  TagDialog.vue  Terminal.vue  TerminalView.vue  TreeNode.vue  VaultSidebar.vue  VaultTab.vue
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/styles/: dialog.css
src/themes/: default.css  index.js  index.ts  light.css
