[package]
name = "terminalz"
version = "0.1.0"
edition = "2021"

[lib]
name = "terminalz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.61"
russh-keys = "0.49.2"
ssh-key = "=0.7.0-rc.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
