[package]
name = "terminalz"
version = "1.0.0"
edition = "2021"
description = "一个基于 Tauri 和 Russh 的跨平台 SSH 远程终端客户端"
repository = "https://github.com/Hanchers/terminalz"
license = "GPL-3.0-only"
authors = ["hancher"]
rust-version = "1.95.0"
publish = false   

[lib]
name = "terminalz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.61"
russh-keys = "0.49.2"
ssh-key = "=0.7.0-rc.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
